fix home button being invisible when position fixed was applied (fix mentioned in previous commit)

--- a/AlanWalkerTheme/visual-refresh/trivia.css
+++ b/AlanWalkerTheme/visual-refresh/trivia.css
@@ -22,6 +22,7 @@
       }
     }
     .guilds_c48ade {
+      mask: unset !important;
       height: calc(100% - var(--guild-margin-bottom) - 54px);
       margin-bottom: var(--guild-margin-bottom);
       margin-top: 54px;
